<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Kotlin and Java by Square,Inc</string>
    <string name="custom_url">Custom URL</string>

    <string name="nothing_selected_message">Please select the file to download</string>

    <string name="channel_id" translatable="false">channelId</string>
    <string name="channel_name" translatable="true">Load</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="swipe_to_right">Swipe to right</string>

    <string name="download_successful">Success</string>
    <string name="download_failed">Fail</string>

</resources>
