<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="40dp"
    app:layoutDescription="@xml/motion_detail_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/tvTitleFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvTitleFileName"
        app:layout_constraintTop_toTopOf="@+id/tvTitleFileName"
        tools:text="@string/glide" />

    <TextView
        android:id="@+id/tvTitleStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFileName" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/tvFileName"
        app:layout_constraintTop_toTopOf="@+id/tvTitleStatus"
        tools:text="Success" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_to_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>